--- a/website/the-villans/2-cyberman.html
+++ b/website/the-villans/2-cyberman.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -45,12 +45,18 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Cyberman</h1>
       <p>Cybermen were a &quot;race&quot; of cybernetically augmented humanoids. They varied greatly in design, with different factions throughout time and space. The two major groups, from which all other known versions derived, were the Mondasian Cybermen, which originated on the planet Mondas – Earth's twin planet in the Doctor's universe – and the Cybermen created by Cybus Industries, which originated on Earth in an alternate universe.<br>
-        Despite the different origins, there were similarities between both groups of Cybermen, and there were groups that shared the characteristics of both. For the most part, they lacked individuality or names. Cybermen had no emotions and viewed them as a weakness. They frequently attempted to physically and mentally re-engineer humans and other humanoids into Cybermen, via a process called &quot;cyber-conversion&quot; or &quot;upgrading&quot;.<br>
-      These Cybermen were originally a wholly organic species of humanoids who originated on Earth's former twin planet, Mondas. Mondas drifted into the outer solar system. To survive, the natives of that world adapted by turning themselves into cyborgs. Eventually, all of the Mondasians underwent cyber-conversion. Many of them left Mondas and ultimately developed into separate groups without connection to one another.</p>
-    <!-- InstanceEndEditable --></td>
+        </p>
+      <p>Despite the different origins, there were similarities between both groups of Cybermen, and there were groups that shared the characteristics of both. For the most part, they lacked individuality or names. Cybermen had no emotions and viewed them as a weakness. They frequently attempted to physically and mentally re-engineer humans and other humanoids into Cybermen, via a process called &quot;cyber-conversion&quot; or &quot;upgrading&quot;.<br>
+        </p>
+      <p>These Cybermen were originally a wholly organic species of humanoids who originated on Earth's former twin planet, Mondas. Mondas drifted into the outer solar system. To survive, the natives of that world adapted by turning themselves into cyborgs. Eventually, all of the Mondasians underwent cyber-conversion. Many of them left Mondas and ultimately developed into separate groups without connection to one another.</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
