--- a/website/the-villans/index.html
+++ b/website/the-villans/index.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -45,10 +45,15 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Villians</h1>
       <p>Some corners of the universe have bred the most terrible things. And here’s where they gather! And where would the Doctor be without monsters to fight and evil to vanquish? From living plastic to Weeping Angels, and from a man made of sweets to villainous Time Ladies. Prepare to be exterminated, deleted, shrunk, mutated, eaten, brainwashed, candy-coated and zapped-back-in-time-to-live-yourself-to-death. Meet the worst of the worst - some of the Doctor’s greatest foes.</p>
-    <!-- InstanceEndEditable --></td>
+      <p>Villains that have appeared on BBC's long-running sci-fi television series Doctor Who. These also include villains that appeared in the spin-off shows Torchwood, The Sarah Jane Adventures, and K-9.</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
