--- a/website/about-the-site.html
+++ b/website/about-the-site.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -111,7 +111,21 @@
         </tr>
       </table>
     </td>
-    <td><!-- InstanceBeginEditable name="Content Area" --><!-- InstanceEndEditable --></td>
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
+	<h1>About the Site</h1>
+	<ul>
+	  <li>Doctors, villians, companions sites created</li>
+	  <li>Master template done</li>
+	  <li>Content filled</li>
+	  <li>Banners being added</li>
+	  <li>Pictures being added</li>
+	  <li>Style sheet done</li>
+	  </ul>
+	<!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
