--- a/website/the-companions/6-rory-williams.html
+++ b/website/the-companions/6-rory-williams.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -51,12 +51,18 @@
         </tr>
       </table>
     </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Rory Williams</h1>
       <p>Portrayed by <b>Arthur Darvill</b></p>
       <p>Rory Arthur Williams — sometimes called Rory Pond — was Amy Pond's husband. He became a companion of the Eleventh Doctor on the night before their wedding, but he died and was erased from history after being absorbed by the Time Field. Shortly before the Pandorica was opened, Rory reappeared, in a fashion, waited for Amy to come out of the Pandorica for 1,894 years and was restored to normal after the second Big Bang. He went on to marry Amy and resumed travelling with her and the Doctor. During this time, his child, Melody Pond, was born. When the Doctor married River, Rory became his father-in-law. In 2012, he was sent back in time by a Weeping Angel, and was soon followed through time by his wife. He died at age 82 some time before 2012. His gravestone stood in a graveyard in New York.<br>
-      Rory was humble, loyal, protective, and a bit sarcastic at times. He was timid in his first meeting with the Doctor. He was easily cowed by Dr Ramsden and terrified by the chaos surrounding the Doctor and Prisoner Zero. He still had the presence of mind to record evidence his comatose patients were strolling outside the hospital. He also helped Amy clear the hospital of patients before Prisoner Zero could kill them.</p>
-    <!-- InstanceEndEditable --></td>
+      </p>
+      <p>Rory was humble, loyal, protective, and a bit sarcastic at times. He was timid in his first meeting with the Doctor. He was easily cowed by Dr Ramsden and terrified by the chaos surrounding the Doctor and Prisoner Zero. He still had the presence of mind to record evidence his comatose patients were strolling outside the hospital. He also helped Amy clear the hospital of patients before Prisoner Zero could kill them.</p>
+      <p>Rory also showed significant compassion and empathy. This sometimes put him in danger, as when he sympathized with Jennifer Lucas and when his first instinct was to help the broken, insane Daleks of the Asylum. He was often found caring for others, sometimes as a nurse, and sometimes just as the TARDIS crew member who stopped to help newcomers acclimate. </p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
