--- a/website/the-companions/8-clara-oswald.html
+++ b/website/the-companions/8-clara-oswald.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" --><img src="../images/banners/banner-companions.jpg" width="950" height="150" alt=""/><!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -51,12 +51,19 @@
         </tr>
       </table>
     </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Clara Oswald</h1>
       <p>Portrayed by <b>Jenna Colemann</b></p>
       <p>Clara Oswald was a companion to the Eleventh Doctor. According to the Doctor, Clara was simply &quot;not possible&quot;. Though assured by the eminent empathic psychic Emma Grayling and the TARDIS scanner that Clara was just an &quot;ordinary girl&quot;, the Doctor couldn't believe that to be true and thought her to be &quot;the only mystery worth solving&quot;.<br>
       In fact, the truth was somewhere in between. She was a physically ordinary human girl from the 21st century, but one who had made an extraordinary sacrifice to save the Doctor's life. Upholding a personal credo not to walk away from danger in the service of others, she chose to enter the Doctor's timeline in his tomb on Trenzalore in order to reverse the damage done to his timeline by the Great Intelligence. This act allowed the time winds to break her into millions of copies of herself that, according to River Song, weren't quite the &quot;real&quot; Clara, but which were nevertheless capable of combatting the Great Intelligence's attack. After her heroism revivified the Doctor, he then returned the favour, guiding the original, 21st century Clara back out of his timeline.</p>
-    <!-- InstanceEndEditable --></td>
+      <p>During her first encounter with the Doctor from her point of view, Clara Oswald was quite reserved and didn't reveal her true feelings easily. Although she was noted for being very clever, she had no computer skills at first, only becoming a computer genius after being uploaded into the Wi-Fi by a Spoonhead. Similar to Oswin, she was wary of the Doctor at first, and, just like Victorian Clara, she was good at looking after children. She followed Merry Galel, a small lost child, to help her find her way. This demonstrated her impulsive inclination to help children, also proved by her becoming a nanny. However, she lacked her Victorian incarnation's recklessness and thought things through more carefully as shown when she didn't instantly agree to join the Doctor on his adventures and told him to come back the next day. Although she was eager for adventure, Clara was cautious and was unsure what to make of the Doctor's bizarre personality. She even seemed to think he might be stalking her, which in a way he was since he followed her timeline in an attempt to understand how she could have multiple lives. Clara was flirtatious but during her first adventure with the Doctor she seemed to react to situations rather than initiate them, unlike her other more proactive incarnations. She seemed touched that the Doctor was guarding her, although she was unsure what the danger was. <br>
+        </p>
+      <p>Clara had close relationships with her mother and father and kept the leaf that had started their relationship for many years after her mother's death, as a memento of their time together. The leaf was very precious to Clara, because, if not for it landing on her father's face many years earlier, he wouldn't have met her mother. Clara gave up both the leaf and her mother's ring in order to defeat the Old God, although she later got the ring back. This shows her selflessness and great strength of character as she was willing to give up two things that were extremely important to her in order to save others. She showed that she was more selfless than the Doctor, who was unwilling to give up his Sonic Screwdriver, even though he could have received another from the TARDIS.</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
