--- a/website/the-doctors/11-matt-smith.html
+++ b/website/the-doctors/11-matt-smith.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -63,14 +63,19 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Eleventh Doctor</h1>
       <p>Portrayed by<b>Matt Smith</b></p>
-      <p>The Eleventh Doctor is the eleventh incarnation of the protagonist of the BBC television science fiction series Doctor Who. He is played by Matt Smith,[9] who appears in three series as well as seven specials, over an almost four-year period. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.<br>
-        Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament. His main companions included feisty Scot Amy Pond (Karen Gillan), her husband Rory Williams (Arthur Darvill) and the mysterious Clara Oswald (Jenna-Louise Coleman). He also frequently appeared alongside River Song (Alex Kingston), a fellow time traveller with whom he shared a romantic storyline, and was the last Doctor to appear alongside the long-serving companion Sarah Jane Smith (Elisabeth Sladen) prior to the actress' death, featuring in two episodes of the spin-off programme The Sarah Jane Adventures.<br>
-      The Eleventh Doctor is portrayed as a brash and lively man who is rather lonely and very aware of his reputation as a fierce enemy to his adversaries (seen when he uses his reputation to scare away the Atraxi in &quot;The Eleventh Hour&quot; or clear the skies above Stonehenge in &quot;The Pandorica Opens&quot;) but has a great deal of affection for his loved ones. He is at times childlike, arguably downright childish, which allows him to connect very well with children. However, there are also times when he acts his age, such as when he retires in Victorian London after the loss of Amy Pond and Rory Williams and becomes a grumpy and solitary man who refuses to interact with others until he is charmed by Clara Oswald. Unlike his two most immediate predecessors, this Doctor seems ignorant of the details of human popular culture, beyond a few references to classic literature, and is often seen embarrassing his companions with his attempts to be cool (including enthusiastic dancing). He even shows ignorance of adult activities such as sharing a bed, providing bunk beds in the TARDIS for the married Ponds, and drinking wine before spitting it back into the glass after trying it. He is also inept at responding to romantic advances, acting awkwardly when River Song and Amy try to seduce him; however, there are times when he behaves more maturely in romantic situations, frequently flirting with River and eventually marrying her, despite his usual discomfort with romance.</p>
-      <p>&nbsp;</p>
-    <!-- InstanceEndEditable --></td>
+      <p>The Eleventh Doctor is the eleventh incarnation of the protagonist of the BBC television science fiction series Doctor Who. He is played by Matt Smith, who appears in three series as well as seven specials, over an almost four-year period. As with previous incarnations of the Doctor, the character has also appeared in other Doctor Who multimedia.<br>
+        </p>
+      <p>Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament. His main companions included feisty Scot Amy Pond (Karen Gillan), her husband Rory Williams (Arthur Darvill) and the mysterious Clara Oswald (Jenna-Louise Coleman). He also frequently appeared alongside River Song (Alex Kingston), a fellow time traveller with whom he shared a romantic storyline, and was the last Doctor to appear alongside the long-serving companion Sarah Jane Smith (Elisabeth Sladen) prior to the actress' death, featuring in two episodes of the spin-off programme The Sarah Jane Adventures.<br>
+        The Eleventh Doctor is portrayed as a brash and lively man who is rather lonely and very aware of his reputation as a fierce enemy to his adversaries (seen when he uses his reputation to scare away the Atraxi in &quot;The Eleventh Hour&quot; or clear the skies above Stonehenge in &quot;The Pandorica Opens&quot;) but has a great deal of affection for his loved ones. He is at times childlike, arguably downright childish, which allows him to connect very well with children. However, there are also times when he acts his age, such as when he retires in Victorian London after the loss of Amy Pond and Rory Williams and becomes a grumpy and solitary man who refuses to interact with others until he is charmed by Clara Oswald. Unlike his two most immediate predecessors, this Doctor seems ignorant of the details of human popular culture, beyond a few references to classic literature, and is often seen embarrassing his companions with his attempts to be cool (including enthusiastic dancing). He even shows ignorance of adult activities such as sharing a bed, providing bunk beds in the TARDIS for the married Ponds, and drinking wine before spitting it back into the glass after trying it. He is also inept at responding to romantic advances, acting awkwardly when River Song and Amy try to seduce him; however, there are times when he behaves more maturely in romantic situations, frequently flirting with River and eventually marrying her, despite his usual discomfort with romance.</p>
+      <p>This incarnation was very cheerful, charismatic and enthusiastic, often at inappropriate times even in danger, much like his next incarnation. While previous incarnations intentionally flouted social conventions, the tenth incarnation was genuinely shocked when he realized that he was being rude or uncouth. He occasionally got into trouble because of an apparent sense of superiority over those less &quot;clever&quot; than he was. He regularly used his name as a threat, which only rarely worked, despite his apparent expectations. </p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
