--- a/website/the-doctors/12-peter-capaldi.html
+++ b/website/the-doctors/12-peter-capaldi.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -63,14 +63,20 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Twelfth Doctor</h1>
       <p>Portrayed by <b>Peter Capaldi</b></p>
       <p>The Twelfth Doctor is to be the twelfth incarnation of the protagonist of the long-running BBC television science fiction programme Doctor Who. He is to be portrayed by Peter Capaldi following the departure of Matt Smith's incarnation in the 2013 Christmas special. Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as the Time Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. As such, this plot mechanism has allowed the Doctor to be portrayed by a series of actors over the decades since the series' inception in 1963.<br>
-        Capaldi will make his first appearance as the Doctor in the 2013 Christmas special episode. He will be accompanied in the eighth series by incumbent companion Clara Oswald (Jenna Coleman).<br>
+        </p>
+      <p>Capaldi will make his first appearance as the Doctor in the 2013 Christmas special episode. He will be accompanied in the eighth series by incumbent companion Clara Oswald (Jenna Coleman).<br>
         Matt Smith, who played the Eleventh Doctor, announced his departure from Doctor Who on 1 June 2013. Prior to the revelation of Capaldi as the next Doctor, there was extensive media speculation on the subject. On 3 August 2013, bookmakers William Hill suspended betting when Capaldi became the five to six favourite to be cast. Capaldi's casting was revealed on 4 August during a live broadcast on BBC One, titled Doctor Who Live: The Next Doctor. The live show was watched by an average of 6.27 million in the UK, and was also simulcast in the United States, Canada and Australia.<br>
-      While Capaldi was the first choice for the role, other actors were also considered in the event that he turned the offer down. Ben Daniels, who was an early favourite following the announcement of Matt Smith's departure, said that he had been approached with a view to assessing whether he would be interested in playing the Doctor, with his name remaining as a potential contender until just before the live BBC broadcast.</p>
-    <!-- InstanceEndEditable --></td>
+        </p>
+      <p>While Capaldi was the first choice for the role, other actors were also considered in the event that he turned the offer down. Ben Daniels, who was an early favourite following the announcement of Matt Smith's departure, said that he had been approached with a view to assessing whether he would be interested in playing the Doctor, with his name remaining as a potential contender until just before the live BBC broadcast.</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
