--- a/website/the-doctors/2-patrick-troughton.html
+++ b/website/the-doctors/2-patrick-troughton.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -63,14 +63,20 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Second Doctor</h1>
       <p>Portrayed by <b>Patrick Troughton</b></p>
       <p>The Second Doctor is the second incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by character actor Patrick Troughton.<br>
         The Second Doctor has been nicknamed the &quot;Cosmic Hobo&quot;, as the impish Second Doctor appeared to be far more scruffy and childlike than his first incarnation.<br>
-        Mercurial, clever, and always a few steps ahead of his enemies, at times he could be a calculating schemer who would not only manipulate people for the greater good but act like a bumbling fool in order to have others underestimate his true abilities. Sometimes this appears simply as a joke, such as in The Tomb of the Cybermen, where he finishes the archaeologists' calculations behind their backs, but at other times, it seems much darker. In The Evil of the Daleks he coldly manipulates Jamie into trying to rescue Victoria (thus setting in motion the Human Factor tests) and is unsympathetic when Edward Waterfield tries to apologise for his collaboration with the Daleks. Despite the bluster and tendency to panic when events got out of control, the Second Doctor always acted heroically and morally in his desire to help the oppressed.<br>
-      This Doctor is associated with the catchphrases &quot;Oh my giddy aunt!&quot; and &quot;When I say run, run!&quot;, and is noted for playing the recorder. In early stories he also demonstrates a fondness for hats and other types of headgear, mainly sporting a distinctive stovepipe hat when outdoors.</p>
-    <!-- InstanceEndEditable --></td>
+        </p>
+      <p>Mercurial, clever, and always a few steps ahead of his enemies, at times he could be a calculating schemer who would not only manipulate people for the greater good but act like a bumbling fool in order to have others underestimate his true abilities. Sometimes this appears simply as a joke, such as in The Tomb of the Cybermen, where he finishes the archaeologists' calculations behind their backs, but at other times, it seems much darker. In The Evil of the Daleks he coldly manipulates Jamie into trying to rescue Victoria (thus setting in motion the Human Factor tests) and is unsympathetic when Edward Waterfield tries to apologise for his collaboration with the Daleks. Despite the bluster and tendency to panic when events got out of control, the Second Doctor always acted heroically and morally in his desire to help the oppressed.<br>
+        </p>
+      <p>This Doctor is associated with the catchphrases &quot;Oh my giddy aunt!&quot; and &quot;When I say run, run!&quot;, and is noted for playing the recorder. In early stories he also demonstrates a fondness for hats and other types of headgear, mainly sporting a distinctive stovepipe hat when outdoors.</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
