--- a/website/the-doctors/9-christopher-eccleston.html
+++ b/website/the-doctors/9-christopher-eccleston.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -63,13 +63,21 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>The Ninth Doctor</h1>
       <p>Portrayed by <b>Christopher Eccleston</b></p>
-      <p>The Ninth Doctor is the ninth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Christopher Eccleston during the first series of the show's revival in 2005. Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as the Time Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.<br>
-        The production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric. To fit in with a 21st-century audience, the Doctor was given a primary companion who was designed to be as independent and courageous as himself in the form of Rose Tyler. He also briefly travels with Adam Mitchell, a self-serving boy genius who acts as a foil to the companions and ultimately proves unworthy, and Jack Harkness, a reformed con-man from the 51st Century. The Doctor, Rose, and Jack form a close team but are separated in the series finale in which each character has to make difficult choices and face sacrifice.<br>
-      In 2006, readers of Doctor Who Magazine voted Eccleston's Doctor the third most popular Doctor. Both mainstream press and science fiction reviewers generally credit the character and Eccleston as helping to re-establish the show following its hiatus between 1989 and 2005. The character's interactions with his archenemies, the Daleks, were particularly praised. However, some reviewers felt that Eccleston was not suited to the character due to seeming uncomfortable in a genre role. Eccleston won several awards for his single series including the 2005 National Television Award for best actor.</p>
-    <!-- InstanceEndEditable --></td>
+      <p>The Ninth Doctor was the ninth incarnation of the Time Lord known as the Doctor. Coping with the nightmarish events of the Last Great Time War, he tended to brood and act crossly to those who rubbed him the wrong way. Despite this, he remained jovial and quite friendly towards anyone he took a liking to. Rose Tyler was his most constant companion, although he did share several adventures with Jack Harkness as well. Absolutely definitive statements about the origins of the Ninth Doctor were complicated, however, by a lack of knowledge about his precise contributions in the Time War and the circumstances in which he regenerated from his predecessor.<br>
+        </p>
+      <p>During the Slitheen's attempt to destroy the Earth for profit, he gained temporary allies in Rose's mother Jackie, Rose's ex-boyfriend Mickey, and Harriet Jones. He also had a single adventure with Adam Mitchell, an employee of Henry van Statten, at Rose's request.<br>
+      </p>
+      <p>He regenerated after he directly absorbed time vortex energy that had converted Rose briefly into the Bad Wolf entity. Though this saved her, it caused massive damage to his body at the cellular level.<br>
+      </p>
+      <p>&nbsp;</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
