--- a/website/the-villans/4-lady-cassandra.html
+++ b/website/the-villans/4-lady-cassandra.html
@@ -19,10 +19,10 @@
     <td colspan="2"><p>[Primary Navigation]</p></td>
   </tr>
   <tr>
-    <td colspan="2">[Banner]</td>
+    <td colspan="2"><!-- InstanceBeginEditable name="Banner" -->[Banner]<!-- InstanceEndEditable --></td>
   </tr>
   <tr>
-    <td width="159"><p>&nbsp;</p>
+    <td><p>&nbsp;</p>
       
       <table>
         <tr>
@@ -45,13 +45,19 @@
         </tr>
       </table>
       </td>
-    <td><!-- InstanceBeginEditable name="Content Area" -->
+    <td>
+    <div class="doctor-who-content">
+	<!-- InstanceBeginEditable name="Content Area" -->
       <h1>Lady Cassandra</h1>
       <p>Portrayed by <b>Zoe Wanamaker</b></p>
       <p>Lady Cassandra O'Brien.Δ17 (pronounced &quot;dot delta seventeen&quot;), or simply Lady Cassandra, was a former human in the far future. Along with other rich and powerful people of the universe, Cassandra was on Platform One, a space station orbiting Earth in the year 5,000,000,000, set to witness the destruction of the planet by the expansion of the Sun.<br>
-        According to Cassandra, her father, a Texan, and her mother, who came from the Arctic Desert, were the last to be buried in Earth's soil. She was born a male on Earth and lived on the edge of the &quot;Los Angeles Crevasse&quot;.<br>
-      Cassandra, who was probably an aristocrat, was very elitist and &quot;looked down her nose&quot; at the Working-class Rose Tyler, whom she considered &quot;common&quot;.</p>
-    <!-- InstanceEndEditable --></td>
+        </p>
+      <p>According to Cassandra, her father, a Texan, and her mother, who came from the Arctic Desert, were the last to be buried in Earth's soil. She was born a male on Earth and lived on the edge of the &quot;Los Angeles Crevasse&quot;.<br>
+        </p>
+      <p>Cassandra, who was probably an aristocrat, was very elitist and &quot;looked down her nose&quot; at the Working-class Rose Tyler, whom she considered &quot;common&quot;.</p>
+    <!-- InstanceEndEditable -->
+   </div class="doctor-who-content"> 
+    </td>
   </tr>
 </table>
 </body>
